<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/user_detail_view"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/iv_cover"
    android:layout_width="0dp"
    android:layout_height="@dimen/iv_cover_height"
    android:contentDescription="@string/view_cover_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_fullname"
    style="@style/AppTheme.TextViewHeader"
    android:layout_width="0dp"
    android:freezesText="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/iv_cover"
    tools:text="John Doe" />

  <LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_fullname">

    <TextView
      style="@style/AppTheme.TextViewTitle"
      android:text="@string/view_text_email" />

    <TextView
      android:id="@+id/tv_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:freezesText="true" />

    <TextView
      style="@style/AppTheme.TextViewTitle"
      android:text="@string/view_text_followers" />

    <TextView
      android:id="@+id/tv_followers"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:freezesText="true" />

    <TextView
      style="@style/AppTheme.TextViewTitle"
      android:text="@string/view_text_description" />

    <TextView
      android:id="@+id/tv_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:freezesText="true" />
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
